# main_BE

./: .dockerignore  .env  .gitignore  .gitmessage.txt  DEPLOYMENT_GUIDE_DOCKER.md  Dockerfile  README.md  api_documentation.html  backup.sql  docker-compose-dev.yml  docker-compose.yml  envexample.txt  pyproject.toml  run_daphne.ps1  send_message.py  test.sh  test_db.py  프로젝트_분석_보고서.html
.github/workflows/: check.yml  deploy.yml
apps/admins/: serializers.py  urls.py  views.py
apps/alarms/: models.py  serializers.py  tasks.py  urls.py  views.py
apps/alarms/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/bookmarks/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/bookmarks/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_groupbookmark_options_and_more.py
apps/chats/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
apps/chats/migrations/: 0001_initial.py  0002_initial.py
apps/common/: middleware.py  middlewares.py  mixins.py  permissions.py
apps/groups/: admin.py  models.py  serializers.py  urls.py  views.py
apps/groups/migrations/: 0001_initial.py  0002_alter_group_agency_alter_group_created_at_and_more.py  0002_initial.py  0003_alter_group_options_group_manager.py  0003_remove_group_logo_image_url_group_logo_image.py  0004_alter_group_name.py  0004_alter_group_options.py
apps/idols/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/idols/migrations/: 0001_initial.py  0002_initial.py  0003_alter_idol_options_alter_idolmanager_options.py  0004_alter_idol_name.py
apps/schedules/: admin.py  models.py  serializers.py  urls.py  views.py
apps/schedules/migrations/: 0001_initial.py  0002_initial.py  0003_alter_groupschedule_options_and_more.py  0003_userschedule.py
apps/test_app/: apps.py  urls.py  views.py
apps/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0002_remove_customuser_profile_image_and_more.py  (+4 more)
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py  settings.py
resources/nginx/: Dockerfile  nginx-dev.conf  nginx.conf
resources/scripts/: run.sh
(+16 files in other folders)
