[project]
name = "main-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-nested>=1.3.3",
    "drf-nested-routers>=0.94.2",
    "drf-spectacular>=0.28.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "channels>=4.0.0",
    "channels-redis>=4.2.0",
    "websocket-client>=1.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
