

# [tool.setuptools.packages.find]
# where = ["apps", "config"]

[project]
name = "main-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.4",
    "django-celery-beat>=2.8.1",
    "django-cleanup>=9.0.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-nested>=1.3.3",
    "drf-nested-routers>=0.94.2",
    "drf-spectacular>=0.28.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "django-filter>=24.2",
    "channels>=4.0.0",
    "channels-redis>=4.2.0",
    "websocket-client>=1.8.0",
    "gunicorn>=22.0.0",
    "uvicorn[standard]>=0.30.1",
    "django-cors-headers>=4.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.setuptools]
packages = ["apps", "config"]

[tool.ruff.lint.per-file-ignores]
"config/settings/__init__.py" = ["F403", "F405"]
"config/settings/dev.py" = ["F403", "F405"]
"config/settings/prod.py" = ["F403", "F405"]
"config/asgi.py" = ["F402"]
